# thesis

./: .gitignore  README.md  claude.md  docker-compose.yml  mkdocs.yml  requirements-docs.txt
backend/: .dockerignore  .env.example  0.3  Dockerfile  load_env.ps1  pyproject.toml  requirements.txt
backend/api/: app.py  configs_store.py  main.py  models.py  prompts.py  routes.py  terminology.py
backend/api/llm/: langchain_client.py  tools.py
backend/configs/: app-usage-daily.yaml  fitbit-hourly-steps-v1.yaml  fitbit-steps-hourly-v1.yaml  linguistic-games.yaml  quality_rules.yaml  virtual-supermarket-game-score-v1.yaml  withings-body-scale.yaml
backend/configs/examples/: fitabase-fitbit-csv.yaml  fitbit-multi-type-json.yaml  withings-body-scale.yaml
backend/configs/existing_configs/: fitabase-daily-activity.yaml  fitabase-hourly-intensities.yaml  fitabase-weight.yaml  fitbit-activity-aggregates-v1.yaml  fitbit-activity-summary-intraday-v1.yaml  fitbit-activity-v1.yaml  fitbit-body-composition-csv-v1.yaml  fitbit-heart-rate.yaml  fitbit-hourly-calories-v1.yaml  fitbit-hourly-intensity-v1.yaml  fitbit-hourly-steps-v1-2.yaml  fitbit-hourly-steps-v1.yaml  fitbit-minute-steps-v1.yaml  fitbit-modified-activity-v1-2.yaml  fitbit-modified-activity-v1.descriptors.json  fitbit-modified-activity-v1.yaml  fitbit-steps-hourly-v2.yaml  generic-heart-rate-csv-v1.yaml  linguistic-games-results-v1.yaml  mhealth-app-usage-daily-v1-2.yaml  mhealth-app-usage-daily-v1.descriptors.json  mhealth-app-usage-daily-v1.yaml  mhealth-app-usage.yaml  (+13 more)
backend/domain/: coerce.py  envelopes.py  models.py  rules.py
backend/pipeline/: __init__.py
backend/shared/: kafka_io.py  models.py  rules.py
backend/src/: pipeline.py
(+205 files in other folders)
