[project]
name = "ph-etl-backend"
version = "0.3.0"
description = "Progressive Harmonization ETL backend (FastAPI single-service)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langchain-anthropic>=0.3",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.3"]
google = ["langchain-google-genai>=2.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "domain",
  "api",
  "api.llm",
  "pipeline",
  "pipeline.connector",
  "pipeline.adapter",
  "pipeline.cleaner",
  "pipeline.validator",
  "pipeline.qualifier",
  "pipeline.mapper",
  "pipeline.fhir",
]
